--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     />
     <link
       rel="Shortcut icon"
-      href="https://cdn.jsdelivr.net/gh/Ajeypalsingh/cdn/logo.png?v=2"
+      href="https://cdn.jsdelivr.net/gh/Ajeypalsingh/cdn/star-icon.png?v=2"
       type="image/x-icon"
     />
     <meta
@@ -35,7 +35,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Star Rating</title>
   </head>
   <body>
     <div id="root"></div>
